--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 .container {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   gap: 10px;
   background-color: hsl(0, 0%, 20%);
@@ -45,9 +46,11 @@ p {
 .links {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   text-decoration: none;
-  gap: 10px;
+  gap: 20px;
+  margin-top: 30px;
 }
 .github {
   text-align: center;
@@ -111,9 +114,23 @@ p {
     flex-direction: column;
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
-    padding: 30px;
-    height: 65vh;
+    padding: 20px;
+    height: 100vh;
     flex-basis: 40%;
+  }
+
+  p {
+  margin-bottom: 7px;
+  color: rgb(185, 181, 181);
+}
+  .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
+    margin-top: 20px;
   }
 }
 
@@ -124,9 +141,23 @@ p {
     flex-direction: column;
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
-    padding: 30px;
-    height: 80vh;
+    padding: 20px;
+    height: 100vh;
     flex-basis: 40%;
+  }
+  .picture {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+  }
+  .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
+    margin-top: 20px;
   }
   p {
     font-size: 13px;
@@ -135,25 +166,64 @@ p {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 426px) {
   .container {
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
-    padding: 30px;
-    height: 89vh;
+    padding: 20px;
+    height: 100vh;
     flex-basis: 40%;
   }
-
-  p {
+  .picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  /* p {
     font-size: 12px;
     margin-bottom: 7px;
     color: rgb(185, 181, 181);
+  } */
+  .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
+    margin-top: 20px;
   }
 }
 
+@media (max-width: 375px) {
+  .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    background-color: hsl(0, 0%, 20%);
+    padding: 20px;
+    height: 100vh;
+    flex-basis: 40%;
+  }
+  .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .picture {
+    width: 100px;
+    height: 90px;
+    border-radius: 50%;
+  }
+}
 @media (max-width: 320px) {
   .container {
     display: flex;
@@ -161,13 +231,28 @@ p {
     flex-direction: column;
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
-    padding: 30px;
-    height: 90vh;
+    padding: 20px;
+    height: 100vh;
     flex-basis: 40%;
   }
 
   .picture {
     width: 60px;
     height: 60px;
+  }
+
+  .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .picture {
+    width: 90px;
+    height: 100px;
+    border-radius: 50%;
   }
 }
