--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 30px;
+  /* min-height: 30px; */
   background-color: black;
   font-size: 15;
 }
