--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   gap: 10px;
   background-color: hsl(0, 0%, 20%);
   padding: 30px;
-  height: 100vh;
+  min-height: 30vh;
 }
 
 .picture {
@@ -123,7 +123,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    height: 100vh;
+    min-height: 20vh;
     flex-basis: 40%;
   }
 
@@ -158,7 +158,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    height: 100vh;
+    min-height: 20vh;
     flex-basis: 40%;
   }
   .picture {
@@ -198,7 +198,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    height: 100vh;
+    min-height: 20vh;
     flex-basis: 40%;
   }
   .picture {
@@ -239,7 +239,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    height: 100vh;
+    min-height: 20vh;
     flex-basis: 40%;
   }
   .links {
@@ -273,7 +273,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    height: 100vh;
+    min-height: 20vh;
     flex-basis: 40%;
   }
 
