--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ p {
   }
   .container {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
@@ -153,6 +154,7 @@ p {
     font-size: 15;
   }.container {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
@@ -193,6 +195,7 @@ p {
     font-size: 15;
   }.container {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
@@ -234,6 +237,7 @@ p {
   }
   .container {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
@@ -268,6 +272,7 @@ p {
   }
   .container {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
