--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   gap: 10px;
   background-color: hsl(0, 0%, 20%);
   padding: 30px;
-  min-height: 50vh;
+  height: 50vh;
 }
 
 .picture {
@@ -124,7 +124,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    min-height: 50vh;
+    height: 50vh;
     flex-basis: 40%;
   }
 
@@ -160,7 +160,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    min-height: 50vh;
+    height: 50vh;
     flex-basis: 40%;
   }
   .picture {
@@ -201,7 +201,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 30px;
-    min-height: 50vh;
+    height: 50vh;
     flex-basis: 40%;
   }
   .picture {
@@ -243,7 +243,7 @@ p {
     gap: 10px;
     background-color: hsl(0, 0%, 20%);
     padding: 20px;
-    min-height: 50vh;
+    height: 50vh;
     flex-basis: 40%;
   }
   .links {
